fix: align v1 measures with existing measures on v2 endpoints
(cherry picked from commit a4ccd42897d085fb1f0ff12f3c02c7b5f25cf675)
