# lib/Controller/V1/MetaDataController.php
@@ -8,11 +8,13 @@ declare(strict_types=1);
 
 namespace OCA\EndToEndEncryption\Controller\V1;
 
+use OCA\EndToEndEncryption\AccessManager;
 use OCA\EndToEndEncryption\Exceptions\MetaDataExistsException;
 use OCA\EndToEndEncryption\Exceptions\MissingMetaDataException;
 use OCA\EndToEndEncryption\IMetaDataStorageV1;
 use OCA\EndToEndEncryption\LockManagerV1;
 use OCP\AppFramework\Http;
+use OCP\AppFramework\Http\Attribute\RequestHeader;
 use OCP\AppFramework\Http\DataResponse;
 use OCP\AppFramework\OCS\OCSBadRequestException;
 use OCP\AppFramework\OCS\OCSForbiddenException;
@@ -42,6 +44,7 @@ class MetaDataController extends OCSController {
 		LoggerInterface $logger,
 		IL10N $l10n,
 		ShareManager $shareManager,
+		private AccessManager $accessManager,
 	) {
 		parent::__construct($AppName, $request);
 		$this->userId = $userId;
@@ -88,6 +91,7 @@ class MetaDataController extends OCSController {
 	 * @param int $id File ID
 	 * @param string $metaData New metadata
 	 * @return DataResponse<Http::STATUS_OK, array{meta-data: string}, array{}>|DataResponse<Http::STATUS_CONFLICT, list<empty>, array{}>
+	 * @throws OCSForbiddenException User is not allowed to edit the metadata
 	 * @throws OCSNotFoundException File not found
 	 * @throws OCSBadRequestException Cannot store metadata
 	 *
@@ -95,9 +99,11 @@ class MetaDataController extends OCSController {
 	 * 409: Metadata already exists
 	 */
 	public function setMetaData(int $id, string $metaData): DataResponse {
+		$ownerId = $this->assertWriteAccess($id);
+
 		try {
-			$this->metaDataStorage->assertMetadataIsV1($this->userId, $id);
-			$this->metaDataStorage->setMetaDataIntoIntermediateFile($this->userId, $id, $metaData);
+			$this->metaDataStorage->assertMetadataIsV1($ownerId, $id);
+			$this->metaDataStorage->setMetaDataIntoIntermediateFile($ownerId, $id, $metaData);
 		} catch (MetaDataExistsException $e) {
 			return new DataResponse([], Http::STATUS_CONFLICT);
 		} catch (NotFoundException $e) {
@@ -123,17 +129,22 @@ class MetaDataController extends OCSController {
 	 *
 	 * 200: Metadata updated successfully
 	 */
+	#[RequestHeader(name: 'e2e-token', description: 'The lock token this folder was locked with, alternatively passed as request parameter')]
 	public function updateMetaData(int $id, string $metaData): DataResponse {
-		$e2eToken = $this->request->getParam('e2e-token');
+		// Legacy clients send the lock token as a request parameter,
+		// but it is also accepted as a header like on the v2 API.
+		$e2eToken = $this->request->getParam('e2e-token') ?? $this->request->getHeader('e2e-token');
 
-		$this->metaDataStorage->assertMetadataIsV1($this->userId, $id);
+		$ownerId = $this->assertWriteAccess($id);
 
-		if ($this->lockManager->isLocked($id, $e2eToken, null, true)) {
+		$this->metaDataStorage->assertMetadataIsV1($ownerId, $id);
+
+		if ($this->lockManager->isLocked($id, $e2eToken, $ownerId, true)) {
 			throw new OCSForbiddenException($this->l10n->t('You are not allowed to edit the file, make sure to first lock it, and then send the right token'));
 		}
 
 		try {
-			$this->metaDataStorage->updateMetaDataIntoIntermediateFile($this->userId, $id, $metaData);
+			$this->metaDataStorage->updateMetaDataIntoIntermediateFile($ownerId, $id, $metaData);
 		} catch (MissingMetaDataException $e) {
 			throw new OCSNotFoundException($this->l10n->t('Metadata-file does not exist'));
 		} catch (NotFoundException $e) {
@@ -154,17 +165,29 @@ class MetaDataController extends OCSController {
 	 * @param int $id file id
 	 * @return DataResponse<Http::STATUS_OK, list<empty>, array{}>
 	 *
-	 * @throws OCSForbiddenException Only the owner can delete the metadata-file
+	 * @throws OCSForbiddenException User is not allowed to delete the metadata-file
 	 * @throws OCSNotFoundException Metadata for the file not found
 	 * @throws OCSBadRequestException Cannot delete metadata
 	 *
 	 * 200: Metadata deleted successfully
 	 */
+	#[RequestHeader(name: 'e2e-token', description: 'The lock token this folder was locked with, alternatively passed as request parameter')]
 	public function deleteMetaData(int $id): DataResponse {
-		$this->metaDataStorage->assertMetadataIsV1($this->userId, $id);
+		// Legacy clients send the lock token as a request parameter,
+		// but it is also accepted as a header like on the v2 API.
+		$e2eToken = $this->request->getParam('e2e-token') ?? $this->request->getHeader('e2e-token');
+
+		$ownerId = $this->assertWriteAccess($id);
+
+		$this->metaDataStorage->assertMetadataIsV1($ownerId, $id);
+
+		if ($this->lockManager->isLocked($id, $e2eToken, $ownerId, true)) {
+			$this->logger->debug('Tried to delete metadata without holding the lock', ['nodeId' => $id]);
+			throw new OCSForbiddenException($this->l10n->t('You are not allowed to edit the file, make sure to first lock it, and then send the right token'));
+		}
 
 		try {
-			$this->metaDataStorage->updateMetaDataIntoIntermediateFile($this->userId, $id, '{}');
+			$this->metaDataStorage->updateMetaDataIntoIntermediateFile($ownerId, $id, '{}');
 		} catch (NotFoundException $e) {
 			throw new OCSNotFoundException($this->l10n->t('Could not find metadata for "%s"', [$id]));
 		} catch (NotPermittedException $e) {
@@ -174,6 +197,22 @@ class MetaDataController extends OCSController {
 			throw new OCSBadRequestException($this->l10n->t('Cannot delete metadata'));
 		}
 		return new DataResponse();
+	}
+
+	/**
+	 * Ensure the current user is allowed to write the metadata of the given file
+	 *
+	 * @return string The user id of the file owner
+	 * @throws OCSForbiddenException The current user has no write access
+	 */
+	private function assertWriteAccess(int $id): string {
+		try {
+			$this->accessManager->checkPermissions($id, true);
+			return $this->accessManager->getOwnerId($id);
+		} catch (\InvalidArgumentException $e) {
+			$this->logger->warning('Unauthorized access to metadata API', ['exception' => $e]);
+			throw new OCSForbiddenException($this->l10n->t('You are not allowed to edit the metadata of this folder'));
+		}
 	}
 
 	private function getOwnerId(?string $shareToken = null): string {
